src/test/ui/underscore-lifetime/in-binder.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:9:6
   |
LL | impl<'_> IceCube<'_> {}
   |      ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:12:15
   |
LL | struct Struct<'_> {
   |               ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:17:11
   |
LL | enum Enum<'_> {
   |           ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:22:13
   |
LL | union Union<'_> {
   |             ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:27:13
   |
LL | trait Trait<'_> {
   |             ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:31:8
   |
LL | fn foo<'_>() {
   |        ^^ `'_` is a reserved lifetime name

warning: lifetime parameter `'_` never used
  --> $DIR/in-binder.rs:9:6
   |
LL | impl<'_> IceCube<'_> {}
   |      ^^----------
   |      |
   |      help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'_` never used
  --> $DIR/in-binder.rs:12:15
   |
LL | struct Struct<'_> {
   |              -^^- help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/in-binder.rs:17:11
   |
LL | enum Enum<'_> {
   |          -^^- help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/in-binder.rs:22:13
   |
LL | union Union<'_> {
   |            -^^- help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/in-binder.rs:27:13
   |
LL | trait Trait<'_> {
   |            -^^- help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/in-binder.rs:31:8
   |
LL | fn foo<'_>() {
   |       -^^- help: elide the unused lifetime

error: aborting due to 6 previous errors

